Adding traits (shared traits for group encounters) - In service of this setting playerIds on the Story in handleWhatHappensHere instead of in the VotingHelper. Adjusting tests to account for retrieving Story based on playerIds instead of based on the player offset.